<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FEFAE0"
    tools:context=".acitivity.PhotoGalleryActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:onClick="toHomeActivity"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="@color/color_AAADA7"
        android:gravity="center"
        android:fontFamily="@font/nunito_semibold"
        android:onClick="deleteAll"
        android:background="@drawable/border_text_next_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:checkedChip="@id/chipAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/all"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFav"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSelfies"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selfies"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMeme"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFood"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"

            />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recPhotoGallery"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_gallery"
        />
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/fcv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.fragment.app.FragmentContainerView>


</androidx.constraintlayout.widget.ConstraintLayout>