<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_FEFAE0"
        tools:context=".acitivity.PermissionActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="530dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/welcome_to_photo_collage"
            android:textColor="@color/color_1B2410"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/nunito"
            android:text="@string/you_can_choose_the_best_collages_fill_them_with_your_photos_and_decorate_them_with_filters_stickers_text_and_more"
            android:textColor="@color/color_1B2410"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/cbPermission"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/permission_selector"
            android:button="@null"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito"
            android:text="@string/i_have_read_and_understood_the_privacy_policy_and_terms_of_service"
            android:textColor="@color/color_1B2410"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cbPermission"
            app:layout_constraintTop_toTopOf="@+id/cbPermission" />

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/color_button_start_off"
            android:onClick="toHomeActivity"
            android:text="@string/let_s_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/let_s_start"
            android:textColor="@color/color_AAADA7"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="@+id/btnStart"
            app:layout_constraintStart_toStartOf="@+id/btnStart"
            app:layout_constraintTop_toTopOf="@+id/btnStart"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>